<resources>
    <string name="app_name">NotesApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">cheezycode</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">cheezycode@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your notes</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your Email</string>
</resources>