<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">


    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <TextView
        android:id="@+id/txtSubheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register_subheader"
        app:layout_constraintTop_toBottomOf="@id/txtHeading"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:fontFamily="@font/sf_pro_display_regular"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        app:layout_constraintTop_toBottomOf="@id/txtSubheading"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_regular"/>


    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:hint="@string/enter_your_username"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_regular"/>


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:hint="@string/enter_your_email"
        android:textSize="16sp"/>



    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_regular"/>


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:hint="Enter your password"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:background="@color/black"
        android:text="@string/txt_sign_up"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        style="@style/Widget.Material3.Button"
        android:fontFamily="@font/sf_pro_display_bold"
        />

    <TextView
        android:id="@+id/txtAlreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_already_have_account"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:fontFamily="@font/sf_pro_display_regular"/>




    <com.github.ybq.android.spinkit.SpinKitView
        android:visibility="gone"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_bar"
        android:indeterminate="true"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>